--- a/msgmonster.tests/build.gradle
+++ b/msgmonster.tests/build.gradle
@@ -11,8 +11,8 @@ eclipse.classpath.file {
 }
 
 dependencies {
+    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
     testImplementation project(':msgmonster')
-    testImplementation 'io.github.lambdaprime:id.xfunctiontests:1.0-SNAPSHOT'
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testImplementation('org.junit.jupiter:junit-jupiter-params:5.4.2')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.4.2')
